<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fauzan.kafe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.fauzan.kafe.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.fauzan.kafe.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.fauzan.kafe.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.fauzan.kafe.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.fauzan.kafe.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.fauzan.kafe.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />
</navigation>